...
    <string name="disappearingMessagesTypeRead">read</string>
    <string name="disappearingMessagesTypeSent">sent</string>
    <string name="disappearingMessagesUpdated"><b>{admin_name}</b> updated disappearing message settings.</string>
    <string name="disappearingMessagesUpdatedYou"><b>You</b> updated disappearing message settings.</string>
    <string name="dismiss">Dismiss</string>
    <string name="displayNameDescription">It can be your real name, an alias, or anything else you like — and you can change it at any time.</string>
    <string name="displayNameEnter">Enter your display name</string>
    <string name="displayNameErrorDescription">Please enter a display name</string>
    <string name="displayNameErrorDescriptionShorter">Please enter a shorter display name</string>
    <string name="displayNameErrorNew">We were unable to load your display name. Please enter a new display name to continue.</string>
    <string name="displayNameNew">Pick a new display name</string>
    <string name="displayNamePick">Pick your display name</string>
    <string name="displayNameSet">Set Display Name</string>
...
    <string name="notificationsStyle">Notification Style</string>
    <string name="notificationsSystem">{message_count} new messages in {conversation_count} conversations</string>
    <string name="notificationsVibrate">Vibrate</string>
    <string name="off">Off</string>
    <string name="okay">Okay</string>
    <string name="on">On</string>
    <string name="onboardingAccountCreate">Create account</string>
    <string name="onboardingAccountCreated">Account Created</string>
    <string name="onboardingAccountExists">I have an account</string>
    <string name="onboardingBackAccountCreation">You cannot go back further. In order to cancel your account creation, {app_name} needs to quit.</string>
    <string name="onboardingBackLoadAccount">You cannot go back further. In order to stop loading your account, {app_name} needs to quit.</string>
    <string name="onboardingBubbleCreatingAnAccountIsEasy">Creating an account is instant, free, and anonymous {emoji}</string>
    <string name="onboardingBubbleNoPhoneNumber">You don\'t even need a phone number to sign up.</string>
...
    <string name="showNoteToSelf">Show Note to Self</string>
    <string name="showNoteToSelfDescription">Are you sure you want to show <b>Note to Self</b> in your conversation list?</string>
    <string name="stickers">Stickers</string>
    <string name="supportGoTo">Go to Support Page</string>
    <string name="systemInformationDesktop">System Information: {information}</string>
    <string name="tapToRetry">Tap to retry</string>
    <string name="theContinue">Continue</string>
    <string name="theDefault">Default</string>
    <string name="theError">Error</string>
    <string name="tryAgain">Try Again</string>
    <string name="typingIndicators">Typing Indicators</string>
    <string name="typingIndicatorsDescription">See and share typing indicators.</string>
    <string name="unavailable">Unavailable</string>
...
