...
                    android:layout_height="1px"
                    android:background="?android:dividerHorizontal"
                    android:elevation="1dp" />

                <androidx.compose.ui.platform.ComposeView
                    tools:visibility="gone"
                    android:id="@+id/seedReminderView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    tools:visibility="visible"
                    android:visibility="gone"
...
                        android:id="@+id/inAppReviewView"
                        android:layout_margin="@dimen/medium_spacing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/newConversationButton"
                        android:contentDescription="@string/AccessibilityId_conversationsNew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:rippleColor="@color/button_primary_ripple"
                        android:src="@drawable/ic_plus"
...
