...

    <TextView
        android:id="@+id/openURLExplanationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:text="@string/dialog_open_url_explanation"
        android:paddingHorizontal="@dimen/medium_spacing"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/small_font_size"
        android:textAlignment="center" />

    <LinearLayout
...
